# BBB_SV-GOOSE

./: CMakeLists.txt  README.md
executable (example)/: iec61850
headers/: goose_header.h  sv_header.h
source/: main.cpp
